# movie-neo4j-semantic-ollama

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_build.sh  pyproject.toml
app/: server.py
